# xDL

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build.gradle  clang-format.py  gradle.properties  settings.gradle
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml
gradle/: nativedeps.gradle  publish.gradle  sanitizer.gradle
gradle/wrapper/: gradle-wrapper.properties
xdl/: build.gradle  local_dependency.cmake
xdl/src/main/: AndroidManifest.xml
xdl/src/main/cpp/: CMakeLists.txt  xdl.c  xdl.map.txt  xdl_iterate.c  xdl_iterate.h  xdl_linker.c  xdl_linker.h  xdl_lzma.c  xdl_lzma.h  xdl_util.c  xdl_util.h
xdl/src/main/cpp/include/: xdl.h
xdl_lib/: build.gradle
xdl_lib/src/main/cpp/: CMakeLists.txt  xdl.c  xdl.map.txt
xdl_sample/: build.gradle
xdl_sample/src/main/: AndroidManifest.xml
xdl_sample/src/main/cpp/: Android.mk  CMakeLists.txt  sample.c
xdl_sample/src/main/java/io/github/hexhacking/xdl/sample/: MainActivity.java  MyCustomApplication.java  NativeSample.java
xdl_sample/src/main/java/io/hexhacking/xdl/sample/: MainActivity.java  MyCustomApplication.java  NativeSample.java
xdl_sample/src/main/res/layout/: activity_main.xml
xdl_sample/src/main/res/values/: colors.xml  strings.xml  themes.xml
